<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_profile_header">Hello, %1$s</string>


    <string name="app_name">SehatIn</string>
    <string name="apikeyWeather">056d22c0a6c2a5f3be97f4eec2a638a6</string>
    <string name="country">Indonesia</string>
    <string name="type">public</string>
    <string name="appIdRecipe">b556aa16</string>
    <string name="appKeyRecipe">9fff6e954aa4994f286388cf5972f8aa</string>
    <string name="search">food</string>
    <string name="web_client_id">430220272543-fufa6vaiof0t3sq4908dejaoseu4nk9v.apps.googleusercontent.com</string>

    <string name="recipe_image">Gambar Resep</string>
    <string name="recipe_title">Judul Resep</string>

    <string name="entry_kotlin_subtitle">Run the MLKit Showcase written in Kotlin.</string>
    <string name="mode_odt_live_title">Object Detection: Live Camera</string>
    <string name="mode_odt_live_subtitle">A device’s live camera can be used to detect objects in an environment.</string>
    <string name="mode_odt_static_title">Object Detection: Static Image</string>
    <string name="mode_odt_static_subtitle">One or more objects can be detected from a provided image.</string>
    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
    <string name="custom_model_live_title">Object Detection: Live Camera with Custom Classification (Birds)</string>
    <string name="custom_model_live_subtitle">A device\'s live camera can be used to detect birds in an environment.</string>
    <string name="settings_title">MLKit Showcase Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_point_at_a_bird">Point your camera at a bird</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search object</string>
    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>
    <string name="buttom_sheet_custom_model_title">Custom object found</string>
    <string name="static_image_prompt_detected_no_results">No results found</string>
    <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_card_no_result_subtitle">Support text place holder</string>
    <string name="static_image_preview_card_subtitle">+%d more results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_header_description">Mari kita mulai hidup sehat</string>
    <string name="home_main_recommendation">Rekomendasi menu hari ini</string>
    <string name="detail_success_add_favorite">Berhasil menambahkan resep favorite :)</string>
    <string name="detail_success_remote_favorite">Berhasil mengahpus resep dari favorite :)</string>
    <string name="detail_failed_update_favorites">Terjadi sebuah masalah, silahkan coba lagi</string>
    <string name="detail_calori_value">%.2f KCal</string>
    <string name="detail_fat_value">%.2f Gram</string>
    <string name="detail_cholesterol_value">%.2f mg</string>
    <string name="detail_protein_value">%.2f Gram</string>
    <string name="item_recipes_portion">%1$d Porsi</string>
    <string name="item_recipe_minute">%1$d Menit</string>
    <string name="item_recipe_calorie">%1$d KCal</string>
    <string name="history_date_scanned">Scanned at: %1$s</string>
    <string name="dialog_title">Exit App</string>
    <string name="dialog_message">Do you want to exit an App?</string>
    <string name="dialog_positive_button" type="id">Yes</string>
    <string name="dialog_negative_button">No</string>

</resources>