<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/item_drawable_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/drawable_scrim_item_recipe"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivRecipe"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/drawable_picture"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.RecipeImageView" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerThickness="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRecipe" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:breakStrategy="simple"
        android:text="Food Title"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@id/tvSource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:breakStrategy="simple"
        android:textColor="?attr/colorOnSurface"
        android:text="Creator"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivPortion"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:src="@drawable/ic_bowl"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvPortion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/item_recipes_portion"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivPortion"
        app:layout_constraintStart_toEndOf="@id/ivPortion" />

    <ImageView
        android:id="@+id/ivTime"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:elevation="2dp"

        android:src="@drawable/ic_time"
        app:layout_constraintStart_toEndOf="@id/tvPortion"
        app:layout_constraintTop_toTopOf="@id/ivPortion"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/item_recipe_minute"
        android:textColor="@color/white"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivTime"
        app:layout_constraintStart_toEndOf="@id/ivTime" />

    <ImageView
        android:id="@+id/ivCalorie"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"

        android:elevation="2dp"
        android:src="@drawable/ic_calorie"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toTopOf="@id/ivTime"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvCalorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"

        android:text="@string/item_recipe_calorie"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivCalorie"
        app:layout_constraintStart_toEndOf="@id/ivCalorie" />


</androidx.constraintlayout.widget.ConstraintLayout>
