<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:id="@+id/fragmentDetail"
            android:visibility="visible"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/topActionBar"
                layout="@layout/top_action_bar_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivFood"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="32dp"
                android:src="@drawable/drawable_vegetables"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Food Title"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ivFood"
                app:layout_constraintStart_toStartOf="@id/ivFood"
                app:layout_constraintTop_toBottomOf="@id/ivFood" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Kesempurnaan panggang memunculkan rasa manis yang tersembunyi, kontras yang menyenangkan dengan aroma tanah yang mendasar. Aromanya memenuhi udara, janji kebaikan masakan rumahan."
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />


            <TextView
                android:id="@+id/tvPortion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:elevation="2dp"
                android:text="2 Serving"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_bowl"
                app:layout_constraintEnd_toStartOf="@id/tvTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />


            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:elevation="2dp"
                android:text="20 Min"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvPortion"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivUsername"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/drawable_vegetables"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/nameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ivUsername"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvCreator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Martha Stuff"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Follow this link to know the recipe detail"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="32dp"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/nameField"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvIngredientsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Ingredients"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="3 Recipes"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@id/tvIngredientsTitle"
                app:layout_constraintStart_toEndOf="@id/tvIngredientsTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientsTitle"
                tools:listitem="@layout/item_ingredients" />

            <TextView
                android:id="@+id/tvNutritionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Nutrition"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvIngredient" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="380dp"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNutritionValue" />


            <TableLayout
                android:id="@+id/tableNutrition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pieChart">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nutrition Facts"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                </TableRow>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerThickness="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivRecipe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="Amount per 100 Grams"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Kalori"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCaloriesValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_calori_value"
                        android:textSize="24sp" />
                </TableRow>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerThickness="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivRecipe" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Lemak"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTotalFat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_fat_value"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Kolesterol"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTotalCholesterol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_cholesterol_value"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Protein"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvTotalProtein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_protein_value"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Scan Again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tableNutrition"
                app:layout_constraintStart_toStartOf="@id/tableNutrition"
                app:layout_constraintTop_toBottomOf="@id/tableNutrition" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
